# omrexams

./: .gitignore  MANIFEST.in  README.md  app.py  config-dyslexia.yaml  config.yaml  crypt.py  omrexams  omrexams.py  pyproject.toml  pyuic.json  question_parser.ipynb  question_parser_mistletoe.ipynb  requirements.txt  setup.py
cli/: __init__.py  correct.py  generate.py  mark.py  moodle_converter.py  sort.py  update_corrected.py  utils
cli/utils/: colors.py  crypt.py  image_utils.py  markdown.py  qrdecoder.py
detector/: crypt.py  detect_circles.ipynb  find_squares.py  omrexam.cls  prova.tex  scanner.py
gui/: __init__.py  grid.py  questionseditor.py  studentsgrid.py  utils
gui/models/: __init__.py  config.py  questions.py  students.py
images/: .omr_bubbles.lb  .omr_instructions.lb  omr_bubbles.fdb_latexmk  omr_bubbles.fls  omr_bubbles.tex  omr_instructions.fdb_latexmk  omr_instructions.fls  omr_instructions.tex  omr_istructions.pxm  omr_no_1.pxm  omr_no_2.pxm  omr_no_3.pxm  omr_no_4.pxm  omr_no_5.pxm  omr_ok.pxm
omrexams/: __init__.py  correct.py  generate.py  mark.py  markdown_converter.py  sort.py
omrexams/gui/: main_window.py  main_window.ui  omrexams.pro
omrexams/gui/widgets/: markdown_view.py  pdf_view.py
omrexams/utils/: crypt.py  directories.py  markdown.py  qrdecoder.py
questions/: 01 notazione posizionale 01.md  01 notazione posizionale 02.md  01 notazione posizionale 03.md  01-introduzione.md  02 codifica interi 01.md  02 codifica interi 02.md  02 codifica interi 03.md  02-reti.md  03 codifica reali 01.md  03 codifica reali 02.md  04 operazioni in ca2 01.md  04 operazioni in ca2 02.md  05 codifica dei testi 01.md  05-rappresentazione.md  06 programmazione strutturata 01.md  06 programmazione strutturata 02.md  06-multimedia.md  07 algoritmi 01.md  07 algoritmi 02.md  07-architetture.md
src/omrexams/: README.md  cli.py  correct.py  generate.py  mark.py  sort.py
src/omrexams/gui/: __main__.py
src/omrexams/texmf/: omrexam.cls
src/omrexams/utils/: crypt.py  image_utils.py  markdown.py  (+1 more)
texmf/: omrexam.cls
(+11 files in other folders)
